--- a/oop2018.secondaprova.gruppo07/nbproject/project.properties
+++ b/oop2018.secondaprova.gruppo07/nbproject/project.properties
@@ -62,6 +62,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
+main.class=oop2018.secondaprova.gruppo07.MainFrame
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=true
 platform.active=default_platform
